src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>品牌</label>
        <picklist>
            <controllingField>Minor_Category__c</controllingField>
            <picklistValues>
                <fullName>CaiZhuangPinPai2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaiZhuangPinPai1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaoJianPinPinPai2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaoJianPinPinPai1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HuFuPinPai1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HuFuPinPai2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LingShiPinPai1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LingShiPinPai2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeiYiPinPai1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeiYiPinPai2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XiePinPai1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XiePinPai2</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Dollar__c</fullName>
        <label>成本($)</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Profit_RMB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>当期利润(￥)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>当期销量</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Revenue_RMB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>当期销售额(￥)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Major_Category__c</fullName>
        <label>大类</label>
        <picklist>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makeup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edible</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minor_Category__c</fullName>
        <label>小类</label>
        <picklist>
            <controllingField>Major_Category__c</controllingField>
            <picklistValues>
                <fullName>CaiZhuang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaoJianPin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HuFu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LingShi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeiYi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xie</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>简介</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price_RMB__c</fullName>
        <label>价格(￥)</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfitMargin__c</fullName>
        <formula>(Price_RMB__c - ( Cost_Dollar__c *  $Setup.Moc_Config__c.ExchangeRate__c ))/( Cost_Dollar__c *  $Setup.Moc_Config__c.ExchangeRate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>利润率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Profit_RMB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>总利润(￥)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>总销量</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_RMB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>总销售额(￥)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Major_Category__c</columns>
        <columns>Minor_Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Price_RMB__c</columns>
        <columns>Cost_Dollar__c</columns>
        <columns>ProfitMargin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>产品名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>